--- a/index.css
+++ b/index.css
@@ -18,4 +18,6 @@
     font-family: Arial, Helvetica, sans-serif;
     font-size: 3rem;
     border: 20px;
+    border-color: white;
+    border-radius: 50px;
 }
